--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "P2M",
   "main": "server.js",
   "scripts": {
-    "test": "mocha './src/tests/*'",
+    "test": "nyc --reporter=html --reporter=text mocha './src/tests/*'",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "nodemon app.js"
   },
   "author": "Luan Brito",
@@ -25,6 +26,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "coveralls": "^3.0.5",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1"
   }
 }
